# silent-chat

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN_DOCUMENT.md  README.md  final.py  final.py.orig  flake.nix  generate_certs.py  index.html  reproduce_crash.py  serve_https.py
b2/: db.json
b2/app/: db.py  main.py
b2/app/apis/: auth.py  messaging.py  users.py
b2/app/core/: config.py
b2/app/models/: auth.py
b2/app/services/: security.py  websockets.py
b2/tests/: conftest.py  test_auth.py  test_crash.py  test_crash_v2.py  test_messaging.py  test_websockets.py
backend/: requirements.txt
backend/app/: db.py  main.py
backend/app/apis/: auth.py  messaging.py  users.py
backend/app/models/: auth.py
backend/app/services/: security.py  websockets.py
backend/tests/: conftest.py  test_alias_validation.py  test_auth.py  test_crash_v2.py  test_messaging.py  test_presence.py  test_websockets.py
im_silent/: CMakeLists.txt
im_silent/src/: UI.cpp  backend.cpp  backend.hpp  crypto.cpp  crypto.hpp  database.hpp  logger.hpp  main.cpp
silent-chat/: ContentView.swift  silent_chatApp.swift
silent-chat.xcodeproj/: project.pbxproj
silent-chat.xcodeproj/xcuserdata/yasinonur.xcuserdatad/xcschemes/: xcschememanagement.plist
silent-chat/Models/: Attachment.swift  InboundMessage.swift  InboundSource.swift  KeyExchangePayload.swift  KeychainKeys.swift  Message.swift  MessageViewModelError.swift  OutgoingMessagePayload.swift  PendingInboundMessage.swift  SentMessage.swift  StorageKeys.swift  StoredMessage.swift  ToastMessage.swift
silent-chat/Services/: APIClient.swift  AuthService.swift  CryptoService.swift  FileService.swift  IdentityFileService.swift  KeychainService.swift  TokenRefreshService.swift  WebSocketService.swift
silent-chat/ViewModels/: AuthViewModel.swift  MessageViewModel.swift
silent-chat/Views/: ContentView.swift
silent-chat/Views/Auth/: LoginScreen.swift
silent-chat/Views/Chat/: AttachmentView.swift  ChatDetailView.swift  ChatMessageInput.swift  ChatMessageList.swift  ChatMessageRow.swift  ChatRowLabel.swift  ChatScreen.swift  NewChatSheet.swift
silent-chat/Views/Components/: GlassEffectModifiers.swift  QuickLookPreview.swift  ToastView.swift
silent-chat/Views/Profile/: ProfileView.swift
tui/: .clang-tidy  CMakeLists.txt  README.md  flake.nix
tui/include/silentchat/: UI.hpp  app_db.hpp  backend.hpp  config.hpp  crypto.hpp  database.hpp  http.hpp  logger.hpp  server.hpp  silentchat.hpp  ssh_server.hpp
tui/src/: UI.cpp  UI.hpp  app_db.cpp  app_db.hpp  backend.cpp  backend.hpp  config.hpp  crypto.cpp  database.cpp  http.cpp  http.hpp  main-server.cpp  main.cpp  ssh_server.cpp  ssh_server.hpp
web/: index.html  manifest.json  styles.css  sw.js  test_crypto.js
web-react/: index.html  package-lock.json  vite.config.js
web-react/src/: App.jsx  index.css
web-react/src/components/: ChatScreen.jsx  LoginScreen.jsx  MessageInput.jsx  MessageList.jsx  PassphraseScreen.jsx  Sidebar.jsx
web-react/src/context/: AppContext.jsx
web-react/src/lib/: api.js  config.js  crypto.js  storage.js  utils.js
web/js/: api.js  app.js  config.js  crypto.js  events.js  storage.js  ui.js  utils.js
